Update and rename 焦虑日记.md to 压力日记.md

--- a/diary/压力日记.md
+++ b/diary/压力日记.md
@@ -993,3 +993,6 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
     第二次没克制住
 
 7. 知乎上因为骂人被禁言了，直接不用知乎了，好消息;
+
+8. 我为什么要看手机，为什么要看知乎，刷垃圾信息，因为我想收获虚荣的自豪感，真正的自豪感来自实践，加油~
+
