--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -219,19 +219,19 @@ X
 	
 	
 	
-12.15
+# 12.15
 
     今天午睡，成功不看手机，想了会idea，躺在床上回忆、动脑还是很舒服的!!!
 
     为理想——大道星河健康工作50年
 
-12.16
+# 12.16
 
     要是有时间，别解压了，去为家人、同学、社会奉献，能收获满满的价值感!
     每一步，都要好多改变和痛苦，好烦呀，hhh，好消息是明天会比今天更好~hhhhh
     杜绝一切不产生价值的讨论，包括和不认识的人吹比，充满益处，因为把时间花在成长上
 
-12.17
+# 12.17
 
     我越长大，越明白别人没有欠我什么东西因此没有关心我的义务，所以不应当炫耀自己来消耗他人的注意力，而是用低调和奉献去为他人创造价值，力求互惠以建立良好的人际关系;
     我获得了信息筛取的感悟，这是摒弃垃圾信息的认知原因/根源，我离摒弃垃圾信息更近了，等下写:
@@ -251,7 +251,7 @@ X
     好好作息，积极思考，努力科研，争取多发paper，多找实习，加油!
     我为什么要看猪皮写出来的造假、片面、情绪化回答，好耶不看了🙈，书籍是更高效的信息源
 
-12.20
+# 12.20
 
     昨晚腰不疼了，好耶，但还是做个检查
     我昨晚太迟的时候，成功关闭了手机，睡的还行，
@@ -268,9 +268,10 @@ X
 
 6. 不该看手机的时候，我在随便找个地方远眺，然后发呆/思考中，找到了松弛和快乐
 7. Shower真的好放松呀，超级适合想
-12.20
 
-    目标+2
+# 12.20
+
+1. 目标+2
 
     知乎上不和任何人吵架
     工作时间不看手机
@@ -278,21 +279,21 @@ X
 2. 我能做到的，我要去迎接更好的自己了
 12.21
 
-    今天不是很快乐，不过吃饭还行
-
-    吃晚饭的时候很开心，怡膳堂一楼，中午、晚上也有我爱吃的南瓜小米粥~!
+1. 今天不是很快乐，不过吃饭还行
+* 吃晚饭的时候很开心，怡膳堂一楼，中午、晚上也有我爱吃的南瓜小米粥~!
 
 添加图片注释，不超过 140 字（可选）
 
 2. apple真是肠道利器，富含膳食纤维，瞬间舒服了
 3. 我今天开始学会和别人说反话，然后我说的话我自己都不信了，这竟然更让我不在乎评价
 添加图片注释，不超过 140 字（可选）
-12.22
 
-    我想总结下机器学习、强化学习、SLAM算法;
-    我昨晚看科大复旦对比踩复旦很开心；但我当时的所有决策不可控制，现在必须统一好好睡觉
+# 12.22
 
-12.23
+1. 我想总结下机器学习、强化学习、SLAM算法;
+2. 我昨晚看科大复旦对比踩复旦很开心；但我当时的所有决策不可控制，现在必须统一好好睡觉
+
+# 12.23
 
     明晚我想去怡膳堂，喝南瓜粥
     我今天，学会温和地（在知乎上）发表言论，耶✌✌
@@ -302,7 +303,7 @@ X
     我和他们不一样，对嫖妓不感兴趣
     为谋生和改造世界读书
 
-12.24
+# 12.24
 
     我把所有学校相关的图片都删除了，只关注知识；
 
@@ -311,45 +312,37 @@ X
 
 2. 我中午看了会数学建模，但看了啥都忘了
 3. 哈哈哈，我刚才又跟人吵架了，但我停下来了，回忆今天干了啥，马上睡觉
-12.25
+# 12.25
 
-    刷牙的时候，想了今天学了什么，今晚睡前也尽量想想;
-    回忆学过的知识让我很开心(≧∇≦)/
-
-    感知机=线性层拟合，损失函数比较奇特；
-    k近邻=二分法；
-    朴素bayes=极大似然求解，最后好像是MSE正好有解析解；
-    决策树忘了;
-    logistic回归=;
+1. 刷牙的时候，想了今天学了什么，今晚睡前也尽量想想;
+2. 回忆学过的知识让我很开心(≧∇≦)/
+* 感知机=线性层拟合，损失函数比较奇特；
+* k近邻=二分法；
+* 朴素bayes=极大似然求解，最后好像是MSE正好有解析解；
+* 决策树忘了;
+* logistic回归=;
 
 3. 吃饭的时候，本来想看手机，想着现在的旧习惯是错的，我要珍惜宝贵的思考和休息时间，就停下来了，想了想下午干了啥，但没提出好的提升方法，对晚上也没有展望，加油!
 4. 我看到那几头猪，努力地来骚扰我，却没有任何效果，我还是度过了充实的一天，从而感到非常开心😊哈哈哈😊😊😊
 5. 晚上的🍠太美味了，超级甜，不到2元（＾ｖ＾）
 添加图片注释，不超过 140 字（可选）
 6. 等过年有医保了去医院看看鼻窦炎
-12.26
 
-    果然，晚上至少要睡10h，没想好明天怎么办，惭愧
-    查看实验结果，本身就超级放松(if 训烂了，then深呼吸，冷静，这是找提升、锻炼训练能力的绝佳时机)，要保持放松的心态
-    I hate working, but i love creating+
-    我好想想一个cv的idea亚，但我必须熟悉opencv, opengl
-    我发现吃饭可以看opengl～!但手机屏幕太小了
+# 12.26
 
-    手机只适合发短信
-
+1. 果然，晚上至少要睡10h，没想好明天怎么办，惭愧
+2. 查看实验结果，本身就超级放松(if 训烂了，then深呼吸，冷静，这是找提升、锻炼训练能力的绝佳时机)，要保持放松的心态
+3. I hate working, but i love creating+
+4. 我好想想一个cv的idea亚，但我必须熟悉opencv, opengl
+5. 我发现吃饭可以看opengl～!但手机屏幕太小了
+* 手机只适合发短信
 6. 哎呀，我发现晚上可以吃红薯来这，忘了
-
-    不过今天把核桃带过来了
-
+* 不过今天把核桃带过来了
 7. 看论文、想idea、写代码、跑实验让我非常开心，有成就感hhh
-
-    客观规律是发挥主观能动性的基础，要充分利用主观能动性，但是没有萧何就不会有韩信这是客观规律
-
+* 客观规律是发挥主观能动性的基础，要充分利用主观能动性，但是没有萧何就不会有韩信这是客观规律
 8. 知乎上冷猪和狗1450的回答提醒我，知乎是个垃圾平台，只能拿来写作，这几头猪竟然提醒我要少看知乎，真是春报了，哈哈哈～～～
 9. 我爱我的爸妈、弟弟和兄弟姐妹，我爱我的老师、学弟和部分学长，我要去为他们好好工作了，加油!
-
-    但我不喜欢某些猥琐学长
-
+* 但我不喜欢某些猥琐学长
 10. 昨晚看了决策树，用熵来选择当前最佳特征，为了提高泛化能力，对构建好的DT按自定义loss剪枝
 
     熵这个指标正好满足某个叶节点类别相同时，熵最小，怎么想出来的hhh
@@ -361,11 +354,11 @@ X
     这样loss就出来了，2+\alpha *1，有了别人想出来的熵还是挺弱智的hhh
 
 11. 遵循规律、付出行动，证明那头母猪根本配不上我，没资格过分要求，加油!晚安
-12.27
+# 12.27
 
-    我要好好工作、好好提升，不仅是为了看见理想，改变世界，也是为了看到更好的人，这堆垃圾我不要
+1. 我要好好工作、好好提升，不仅是为了看见理想，改变世界，也是为了看到更好的人，这堆垃圾我不要
 
-    2年前，我不仅有科沿理想，还有政治理想，只是自己一直没好好锻炼来提升能力，惭愧
+2年前，我不仅有科沿理想，还有政治理想，只是自己一直没好好锻炼来提升能力，惭愧
 
 2. I hate working, but i love creating++
 3. 标准7分饱hhh
@@ -391,14 +384,12 @@ X
     其实这个星期想了一个半上午的idea，想出来一个粗糙看起来根本不能用的alg，远远不够要继续改进努力
 
 15. 我想看看计算方法
-12.28
+# 12.28
 
-    明天可以休息了，早上起来打个篮球，重设银行密码，回来写读书报告，下午正常工作，加油！
-    那几坨猥琐老鼠屎又钻出来了，但是对我没有丝毫影响，我的抗干扰能力又提升了
-    昨晚果断关掉了手机，抗干扰能力获得提升，此外还获得了任何时候都果断关掉手机\远离垃圾信息软件的经验
-
-    xhs和知乎一样，是垃圾信息软件，看公众号就好了，就是有点累hhh
-
+1. 明天可以休息了，早上起来打个篮球，重设银行密码，回来写读书报告，下午正常工作，加油！
+2. 那几坨猥琐老鼠屎又钻出来了，但是对我没有丝毫影响，我的抗干扰能力又提升了
+3. 昨晚果断关掉了手机，抗干扰能力获得提升，此外还获得了任何时候都果断关掉手机\远离垃圾信息软件的经验
+* xhs和知乎一样，是垃圾信息软件，看公众号就好了，就是有点累hhh
 4. 今天写读书报告，开始吧!
 5. 废话少说，干就完了，多喝水下午至少1L
 6. 读书报告*1=4:15,
@@ -420,41 +411,36 @@ X
 
 16. 今晚回顾了大语言模型的发展历程，终于知道大语言的工作者这几年在干什么了，受益不浅，非常开心，不过DeepSeek怎么训练的还没搞懂
 17. 下个星期天写计算方法笔记，反正要报废一天，暴了暴了；
-12.29
 
-    昨晚睡前突触没完全切点，看了10min手机，想到现在想的都是错的，关机睡觉了，突触+1nice!
-    早上起来，没有跟沙比吵架，收获了更多时间想怎么实现目标，突触+1
-    而且想到手机除了通讯和MP3听歌没有用，就只看钉钉微信音乐，突触+1，nice!
-    不争吵的原因是,大部分争吵对自己毫无价值,在少部分时候,不争吵也节省精力
+# 12.29
 
-    不争吵只会赚不会亏,当然不吵架,专注目标
-
-5. 我刚才不小心看了下xhs，又产生了和别人吵架的念头，但是马上打消了，nice!
-6. vivo蒸馏优化的失败告诉我，不要做自己厌恶的工作，我宁可不要潜在的收益也不浪费时间
-7.  艾，我不是很开心，所以买了开心果，不过做到自己的最好就是了，just gogogo，保持乐观加油!
+1. 昨晚睡前突触没完全切点，看了10min手机，想到现在想的都是错的，关机睡觉了，突触+1nice!
+2. 早上起来，没有跟沙比吵架，收获了更多时间想怎么实现目标，突触+1
+3. 而且想到手机除了通讯和MP3听歌没有用，就只看钉钉微信音乐，突触+1，nice!
+4. 不争吵的原因是,大部分争吵对自己毫无价值,在少部分时候,不争吵也节省精力
+5. 不争吵只会赚不会亏,当然不吵架,专注目标
+6. 我刚才不小心看了下xhs，又产生了和别人吵架的念头，但是马上打消了，nice!
+7. vivo蒸馏优化的失败告诉我，不要做自己厌恶的工作，我宁可不要潜在的收益也不浪费时间
+8.  艾，我不是很开心，所以买了开心果，不过做到自己的最好就是了，just gogogo，保持乐观加油!
 
     我还是不知道Cv的主线，
 
-8. - [ ] 傍晚回来总结一下
-9. 我对数字图像处理、计算机视觉中图像特征抽取、变换等原理有深入详细的了解，但opencv\eigen\pangolin\opengl等代码库没跑过，坑货的ShapeNet数据集读取也遇到版本不匹配，坑四了;
-10. 去想想6D Diffusion;
-11. 蹲坑的时候，没带手机，想了会问题的方法，感觉好爽呀，果然还是想问题好玩，睡前也不带手机了
-12. 我今天学到，ML学到的模型要能够拿来用，要熟悉概率分布的计算，多元统计分析有什么用?
-13. 洗了个澡，舒服
-14. 晚上回来的时候收获了蛤蟆🐷给我带来的自信，nice!
-15. 先睡觉，qnmd报告
-12.30
-
-    收获了过滤垃圾的理由：不过滤垃圾对我实现理想有什么帮助吗?nice!
-    一个人想要进步，必然需要花时间在提升自己身上，在别人身上花的时间自然减少，必然会受到自私母猪的抱怨，由于明事理、识大体女性在现在社会的比例可以忽略不计，因此想要进步必然没有女朋友是规律
-
-    我为什么要花时间在一个追求、道德、品格都远不及我的垃圾身上，因为社会风俗，那不遵守不就行了，我对母猪不感兴趣，哈哈哈
-
+9. - [ ] 傍晚回来总结一下
+10. 我对数字图像处理、计算机视觉中图像特征抽取、变换等原理有深入详细的了解，但opencv\eigen\pangolin\opengl等代码库没跑过，坑货的ShapeNet数据集读取也遇到版本不匹配，坑四了;
+11. 去想想6D Diffusion;
+12. 蹲坑的时候，没带手机，想了会问题的方法，感觉好爽呀，果然还是想问题好玩，睡前也不带手机了
+13. 我今天学到，ML学到的模型要能够拿来用，要熟悉概率分布的计算，多元统计分析有什么用?
+14. 洗了个澡，舒服
+15. 晚上回来的时候收获了蛤蟆🐷给我带来的自信，nice!
+16. 先睡觉，qnmd报告
+# 12.30
+1. 收获了过滤垃圾的理由：不过滤垃圾对我实现理想有什么帮助吗?nice!
+* 一个人想要进步，必然需要花时间在提升自己身上，在别人身上花的时间自然减少，必然会受到自私母猪的抱怨，由于明事理、识大体女性在现在社会的比例可以忽略不计，因此想要进步必然没有女朋友是规律
+2. 我为什么要花时间在一个追求、道德、品格都远不及我的垃圾身上，因为社会风俗，那不遵守不就行了，我对母猪不感兴趣，哈哈哈
 3. 洗澡没那么难和浪费时间，去洗就是了
 4. 擅长生活的人可以交到更多的朋友，因为不是每个人都有相同的爱好，但每个人都必须面对生活
 5. 今天把一袋开心果，给每个学长都抓了一大把，在自己啃点，一下子就分完了哈哈哈，要多分享也许是个不错的主意，但这不是我自己挣的，丢脸努力挣钱
 6. 又写了一篇技术类文章，开心+1；
-
 7. 我发现我好像进行了一个转变：从寻找生活中的快乐>>> 寻找不同知识点和代码中的快乐; nice!
 
     炒货和水果依旧让人开心!
@@ -472,12 +458,10 @@ X
 13. 我的专注力获得了一次升华(成事在天，事在人为)，nice加油!
 14. 终于开启努力跑各种baseline模式,有点小激动!我好菜呀
 15. 完成读书报告+1!晚安，我爱我的家人和学长们，我爱数学、计算机视觉、强化学习(虽然我还没搞懂)
-12.31
+# 12.31
 
-    艾, 早上吃完饭又看到萎缩老鼠了, 又收获了蛤蟆🐷给我带来的自信，
-
-    过滤垃圾能够提升我实现理想的能力,nice!
-
+1. 艾, 早上吃完饭又看到萎缩老鼠了, 又收获了蛤蟆🐷给我带来的自信，
+* 过滤垃圾能够提升我实现理想的能力,nice!
 2. 今天早上5个引体向上~
 3. 一想到以后的挑战与机遇, 亢奋非常哈哈哈,冲鸭
 4. 我学会区分 
@@ -495,23 +479,21 @@ X
 6. 离猪栏更远，与理想更近，我的自信又增强了，哎，都懒得说了，加油哈哈哈
 7. 目标+1: 学有余力的话，要再记点单词，很多教程都是英语写的
 8. 现在会导入2D图像和物体，变换渲染了，但3D图像还不会
-1.1
 
-    睡觉真让人舒服
-    我尽力给我没见过的朋友祝福和情绪价值了
-    opengl渲染三维点、纹理到屏幕或3D对象，pangolin是opengl的封装;
-    眼里还能出现母猪，说明还得练，不过已经有实质性的进步了nice
-    一起床就想到目标，nice!状态不错
-    搞半天没编译成功的mesh_to_sdf发现，别人已经写了python库了，开发真伟大，我也要开发，我爱开发!
-    两个学弟、两个同学、4个家长、两个弟妹、还有一个家庭群的小红包全承包了xixixi，要多搬砖实习科研挣钱以后好发更大的红包
-    都有pyrender渲染图像、mesh-to-sdf计算sdf值了，但是pangolin和opengl的会快点
+# 1.1
 
-
+1. 睡觉真让人舒服
+2. 我尽力给我没见过的朋友祝福和情绪价值了
+3. opengl渲染三维点、纹理到屏幕或3D对象，pangolin是opengl的封装;
+4. 眼里还能出现母猪，说明还得练，不过已经有实质性的进步了nice
+5. 一起床就想到目标，nice!状态不错
+6. 搞半天没编译成功的mesh_to_sdf发现，别人已经写了python库了，开发真伟大，我也要开发，我爱开发!
+7. 两个学弟、两个同学、4个家长、两个弟妹、还有一个家庭群的小红包全承包了xixixi，要多搬砖实习科研挣钱以后好发更大的红包
+8. 都有pyrender渲染图像、mesh-to-sdf计算sdf值了，但是pangolin和opengl的会快点
 9. 我终于读完了用cpp+opengl+pangolin+eigen写程序，并编译输出为bin文件，再由python调用的的小程序，并安装三方C++库后运行成功，nice! 我好菜但有不少收获，继续加油哈哈哈!
 10. 经验+1：单发的祝福，比群发的祝福更有心意诶
-1.2
-
-    我昨天晚上通过反思打游戏的冲动，明白了一个道理
+# 1.2
+1. 我昨天晚上通过反思打游戏的冲动，明白了一个道理
 
     不要钻牛角尖，🈶的时候脑子不清醒想到理由因为突触不牢固也无法完全消除错误的想法，这时候不要钻牛角尖，默认以前的要求是对的，执行就完了，执行要求就对了
     不要拿知乎、xhs来放松(过多的信息只会让大脑更累)，不要打游戏
@@ -530,22 +512,19 @@ X
 6. 晚外卖，看论文讲解视频，有进步，要多养成突触
 7. 还有，看以前的工作日记，总结经验、指定目标
 8. 收获目标+1：坚持每周日晚上写周报
-1.3
+# 1.3
 
-    昨天晚上一回去就关机，洗漱完马上睡觉，早上8点就醒了，效果不错，继续坚持
-    收获 习惯+1：睡前不要思考，已经很累了想不出来什么的，直接放送睡觉就行
-    早上起来只能俯卧撑*20，太菜了，要多练练哈哈哈
-    早起有红薯吃，nice!
-    早上10点半晒太阳，不知道为什么超级舒服，这两年坚持这个习惯哈哈哈
-    时间有限，没时间看知乎上的破烂回答、
-    上午被莫名其妙的bug坑了1h呜呜呜，经验+1：明天早上想好早上的规划，下次先干重要的事情
+1. 昨天晚上一回去就关机，洗漱完马上睡觉，早上8点就醒了，效果不错，继续坚持
+2. 收获 习惯+1：睡前不要思考，已经很累了想不出来什么的，直接放送睡觉就行
+3. 早上起来只能俯卧撑*20，太菜了，要多练练哈哈哈
+4. 早起有红薯吃，nice!
+5. 早上10点半晒太阳，不知道为什么超级舒服，这两年坚持这个习惯哈哈哈
+6. 时间有限，没时间看知乎上的破烂回答、
+7. 上午被莫名其妙的bug坑了1h呜呜呜，经验+1：明天早上想好早上的规划，下次先干重要的事情
 
-1.4
-
-    呜呜呜呜，花爸妈的钱给自己买了新硬盘，全力以赴冲鸭!
-
-    以后花爸妈的钱，不能浪费自己的时间了
-
+# 1.4
+1. 呜呜呜呜，花爸妈的钱给自己买了新硬盘，全力以赴冲鸭!
+* 以后花爸妈的钱，不能浪费自己的时间了
 2. 我开始欣赏隔壁组学长学弟们的踏实干劲了，心态不错，快去用心工作
 3. 工作累了，做深蹲*20，舒服，顺带矫正o型腿hhh
 4. 午睡成功，因为我换了椅子嘿嘿，以后中午可以在实验室了nice~
@@ -553,18 +532,17 @@ X
 6. 早起俯卧撑*21
 7. 今天年货节省了100!
 8. 去看病医保又省了100!
-1.5
 
-    早起俯卧撑*21+篮球场跑3 Q，小雨提醒我多跑步
-    如何才能让今天的效率更高?
-    早上起床看了公众号，继续保持
-    今天工作间隙深蹲20*2，加油
-    污水成功!就是颈椎有点疼，所以我重装椅子+枕头!
-    没办法，只能这样了，继续努力~
+# 1.5
+早起俯卧撑*21+篮球场跑3 Q，小雨提醒我多跑步
+如何才能让今天的效率更高?
+早上起床看了公众号，继续保持
+今天工作间隙深蹲20*2，加油
+污水成功!就是颈椎有点疼，所以我重装椅子+枕头!
+没办法，只能这样了，继续努力~
+不接着刷nba等正常放松是对的，这周日写个报告好好放松一下
 
-    不接着刷nba等正常放松是对的，这周日写个报告好好放松一下
-
-1.6
+# 1.6
 
     我从龙芯身上汲取了自信心、自豪感，全力以赴加油
     早上有红薯耶，如果不用豆浆就不去另一个窗口了
@@ -589,7 +567,7 @@ X
     只能选有分布的几何3D纹理(2D是像素)
     要多看论文、多想
 
-1.7
+# 1.7
 愿望
 
     我好想总结下机器人运动学
@@ -606,7 +584,7 @@ X
     亮亮的选择是正确的
 
 成就
-1.8
+# 1.8
 
     我昨晚首先描述了抹黑带来的负面情绪，然后剖析抹黑为什么能带来能造成负面影响——过于寻求别人的认同，意识到我还是缺少主见和自我认同，进一步朝着豁达的胸襟前行
 
@@ -620,7 +598,8 @@ X
     这是绝对正确的，不习惯正常，坚持下去会有不少进步
 
 8. 我考，我猜对了，这代理的订阅是会更新的，carry on跑基线继续(虽然idea暂时还很少)
-1.9
+
+# 1.9
 
     昨晚睡前本来想看nba的，想到工作日运动，周日再看，就睡觉了，有进步;
     早上起来一开始就打开公众号看论文，看了一个多地形视觉泛化策略，效果不错;
@@ -634,7 +613,7 @@ X
 
     目标+1: 晚上想看会huggingface的community哈哈哈
 
-1.10
+# 1.10
 目标
 
     调出distill obj fetch
@@ -685,7 +664,7 @@ night
     打乒乓球
     看完3DGS读懂代码
 
-1.11
+# 1.11
 
     好习惯+1：晚上8:30吃个apple🍎，避免晚上饿肚子
     好习惯+1：睡前别干繁琐的事情，避免增加压力
@@ -733,7 +712,7 @@ night
 
     I'm coming~
 
-1.12
+# 1.12
 
     我昨天通过写DeepSeek的报告，意识到计算方法和压缩模型模型的关联我，这激励我回顾、学习新的(数学)知识的热情
     我都没有时间回顾、没有时间思考，看垃圾信息有什么意义呢，只能睡觉
