--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -739,13 +739,21 @@ night
 
 # 1.14
 
-    一早上起来就划掉垃圾信息，有进步
+1. 一早上起来就划掉垃圾信息，有进步
 
     经验+1：我发现精力充沛的时候，判断力和自控能力都会增强
     猪皮的看法确实不重要，
 
-2. 我要去追小王了，但是好累呀，以后再说吧
-3. 目标习惯+1：像戒游戏一样戒手机
-4. 好习惯+1：因为被禁言，反而开始用github来替代知乎了，因祸得福
-5. 好习惯+1：半小时的午睡，真让我舒服，精力充沛~
-6. 我好想在论文上发点paper呀;
+3. 我要去追小王了，但是好累呀，以后再说吧
+4. 目标习惯+1：像戒游戏一样戒手机
+5. 好习惯+1：因为被禁言，反而开始用github来替代知乎了，因祸得福
+6. 好习惯+1：半小时的午睡，真让我舒服，精力充沛~
+7. 我好想在论文上发点paper呀;
+
+
+# 1.15
+## 今日目标
+1. 开始训练obj-walking
+2. read VLA
+3. 
+
