--- a/diary/成长日记.md
+++ b/diary/成长日记.md
@@ -1006,6 +1006,14 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 13. 我还能做什么
 * 尝试各种新的任务；
 
+# 1.15
+1. 刚才想解压，但是不知道干嘛，
+* 我真的不想碰垃圾动作游戏，和费眼睛的赛尔号等游戏
+* 刚才看了会黄漫也感觉好无聊，
+* 我想到可以看数学书和别的书，那就看书吧
+* 再睡会去打篮球
+2. 
 
 
 # 1.15
+
