--- a/diary/成长日记.md
+++ b/diary/成长日记.md
@@ -1012,8 +1012,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 刚才看了会黄漫也感觉好无聊，
 * 我想到可以看数学书和别的书，那就看书吧
 * 再睡会去打篮球
-2. 
-
-
-# 1.15
-
+2. 答案，还是好好休息，好好工作，我再睡会
