--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -1,25 +1,27 @@
     我会在这里，填满开心时刻、经验和收获
 
-2025年12月2日
-
+# 2025年12月2日
+ 
     我发现辅导员真的超级友善，是这一年里遇到的最关心我的人了!
 
-2025年12月3日
+# 2025年12月3日
 1. 我今天找到了网易公开课这个宝藏APP，很多情绪、人生的问题，这里都有专业权威的指导，确实可以开拓思路，而不是知乎b栈上那些半吊子博主；
 2. 我这一年碰到的所有负面情绪都在这门课程里找到对应的对策，tql；
 3. 紫金港东区学生食堂的饭菜性价比真高!!!
-2025年12月4日
 
-    我找到了自己真正的目标!!!——大脑一下子超级开心！！！现在看来当然是白日做梦
+# 2025年12月4日
+
+1. 我找到了自己真正的目标!!!——大脑一下子超级开心！！！现在看来当然是白日做梦
 
     努力成为一个优秀的数学家、科学家、工程师、创造者!!!
 
 2. 晚上搬砖完跑步，有一个瞬间，暖流流遍全身，超级舒服
 3. 看论文思考idea获得了3dcv方向的普遍loss设计，render，纹理等等
-2025年12月5日
 
-    晚上回寝室嗑瓜子(虽然晚上肚子饿的时候,一阵瓜子碎粒在胃中的充实感),什么都不干
-    看到网易公开课上的10个生活小技巧,感觉很好玩
+# 2025年12月5日
+
+1. 晚上回寝室嗑瓜子(虽然晚上肚子饿的时候,一阵瓜子碎粒在胃中的充实感),什么都不干
+2. 看到网易公开课上的10个生活小技巧,感觉很好玩
 
     以前觉得旅游\运动\美食这些都挺无聊的,总是固执地认为唯一的乐趣来自有价值的工作,
     但我们能接触到的无非就是这些了,如果能从这些体验到快乐,能极大提升我们的幸福感,缓解焦虑\抑郁\压力
@@ -27,7 +29,8 @@
     现在觉得竞争挺无聊的,好好放松,好好工作
 
 3. 我发现我爸我妈还是很爱我的,我还有我的家人们可以陪伴和分享,nice!
-12月6日
+
+# 12月6日
 
     优酸乳很好喝
     我发现我还是很喜欢科研的，喜欢思考，喜欢尝试，喜欢探索，虽然现在还没写出什么论文，知识框架还算完整
@@ -35,24 +38,27 @@
 
 添加图片注释，不超过 140 字（可选）
 4. 我今天终于看懂了EBM的几种变体，稍微知道了怎么用，还是有收获、挺开心的
-12月7日
+
+# 12月7日
 
     bird浙 6.1的元气breakfast，就是干巴巴的，好渴呀
 
 添加图片注释，不超过 140 字（可选）
 2. google在刁钻问题上比飞舞duckgo和gpt强100倍，虽然有时还是不够～
-12月8日
 
-    我昨天晚上多次和刷手机的冲动对抗，并成功入睡，并明白了通过行动养成新的突触、节省光阴用来享受挑战和快乐的道理!
+# 12月8日
+
+1. 我昨天晚上多次和刷手机的冲动对抗，并成功入睡，并明白了通过行动养成新的突触、节省光阴用来享受挑战和快乐的道理!
 
 为什么要养成好习惯？
 2. 我有了生活的爱好，有了理想，正在慢慢养成正确的放松和入睡习惯，其他的我本来就很好，未来它们也许会证明自己的力量;
 (我上一个理想是学自己想学的课 并且把gpa刷到3(满足中层次海博的最低要求)，上上个理想是考上浙大，上上上个理想是让爸妈过上体面的生活)
 3. 我看到了好人好事，并没有嫉妒，而是赞美并且见贤思齐，就像前天看到一个同学骑车摔倒帮他把车扶起来一样，继续行动，善行能够培养好性格的突触为将来枝繁叶茂扎下深根
 4. 我发现不要向下社交，所以我决定清除所有不熟的、低价值观的同学，我什么都得不到
-12/9
 
-    早上吃饭按照小红书上的教程，用钳子夹修复拉不上的拉链，不怕钥匙卡丢失，nice!
+# 12/9
+
+1. 早上吃饭按照小红书上的教程，用钳子夹修复拉不上的拉链，不怕钥匙卡丢失，nice!
 
 添加图片注释，不超过 140 字（可选）
 2. nice，我研究生以来第一次用打篮球来解压
@@ -68,7 +74,8 @@ www.princeton.edu
 4. 知乎，看nm的知乎，哈哈哈，我又收获一个正确的觉悟~~
 5. 刚才骑车回来的路上，理顺了DeepSDF训练、推理的流程，不过我的idea泡汤了真好~，我本来就不会想idea，要继续锻炼想idea的技能
 6. 今天拍了很多积极的照片，用两种方式安装cpp库到系统include文件夹，用hf下载数据集，搞清楚繁琐的数据集构造，和cpp写的SDF、表面法线计算函数，终于看懂DeepSDF的训练过程（以前两三次以为看懂了其实没看懂），今天很晚了，回来不看复杂的活，睡觉，明天加油!
-12/10
+
+# 12/10
 
     今晚的目标是
 
@@ -88,14 +95,15 @@ www.princeton.edu
     退让无用就往前走
 
 感觉这sb哪吒都快累死了
-12/11
 
-    明天，找算法，跑代码
+# 12/11
+
+1. 明天，找算法，跑代码
     我效率贼低，贼低就贼低把，把时间投入到有价值、有意义的工作和享乐上就行；
 
-    不把时间投入到游戏、吵架这些浪费生命的事情上就行；
+	不把时间投入到游戏、吵架这些浪费生命的事情上就行；
 
-享受改垃圾代码，看论文，想idea
+2. 享受改垃圾代码，看论文，想idea
 3. 对数学知识点的回顾秒杀了刷垃圾的反射；
 4. 我找到了下一个要改变的点——不在垃圾消耗型sb女和低层人身上花时间
 5. 分享了今日美食>德克士
@@ -104,7 +112,7 @@ www.princeton.edu
     嘻嘻，看了大数据算法+PRML共15min，走马观花看目录，明天好好看加油，
     我发现我还是很喜欢看书的~
 
-12.12
+# 12.12
 
     晚上至少睡6周期=9h，昨晚睡得不错~(*^▽^*)
     菠萝汉堡真的有菠萝耶
@@ -121,9 +129,10 @@ www.princeton.edu
 7. 我还记得我的理想，nice!
 8. 远离低层，我能看到更好的挑战
 9. 我获得了芒果的认同——人生需要避免的3种东西，看来我的想法是完全正确的，再接再厉全力以赴前行hhh!
-12.13
 
-    我真的不想看这些78了，垃圾滚出我的生活，这是最后一次哈哈哈!
+# 12.13
+
+1. 我真的不想看这些78了，垃圾滚出我的生活，这是最后一次哈哈哈!
     现在超级想看书>去看论文，除了效率极低基本没有什么缺点了
     看了知乎的页面没点任何内容，惊喜地发现我就不该打开知乎，nice!知乎>无聊的回路又升级了
 
@@ -137,88 +146,23 @@ www.princeton.edu
 6. 看懂了一篇paper用光流估计2D图像的像素匹配，后面没经精力看下一篇还磨蹭了一会负收益，下次应该直接回来hhh，看了那么多CV前置算法总算都了解，赶紧接着想idea，跑实验
 7. 加油睡觉了
 8. 今天开始弃知乎，看浙大科大新闻网!
-12.14
+# 12.14
 
-    通过看电影<新神榜-杨戬>缓冲，我终于克服了打游戏的冲动，并基本正常入睡!
-    今天看了<扬名立万>，被齐乐山和演员们的责任感鼓舞了，好好学习：促进科学进步、改变社会结构
+1. 通过看电影<新神榜-杨戬>缓冲，我终于克服了打游戏的冲动，并基本正常入睡!
+2. 今天看了<扬名立万>，被齐乐山和演员们的责任感鼓舞了，好好学习：促进科学进步、改变社会结构
 
     红砖并进、理实交融
     电影具有鼓舞人心的作用
 
 3. 下午回来腰疼躺床上，听歌放松思考人生，收获处理身体不适、精神状态不适的强力急救包
 添加图片注释，不超过 140 字（可选）
-本周生活收获
+## 本周生活收获
 
-    回来休息的时候看电影、正常吃饭、骑行，还挺正常的，下周不能摆烂要再接再厉，享受生活的快乐(虽然论文没写好焦虑呀)，多次完整克服了打游戏的冲动；
-    下周的目标是，
+* 回来休息的时候看电影、正常吃饭、骑行，还挺正常的，下周不能摆烂要再接再厉，享受生活的快乐(虽然论文没写好焦虑呀)，多次完整克服了打游戏的冲动；
+下周的目标是，
+1. 不跟知乎、xhs和生活里的猪皮吵架，只把xhs用作吃喝玩推荐，
+2. 平时养成听歌的放松好习惯，可以辅以跑步、打篮球	
 
-    不跟知乎、xhs和生活里的猪皮吵架，只把xhs用作吃喝玩推荐，
-    平时养成听歌的放松好习惯，可以辅以跑步、打篮球
-
-week53
-保持
-	
-12.15
-	
-16
-	
-17
-	
-18
-	
-19
-	
-20
-	
-21
-不看不扯皮
-	
-X
-	
-X
-	
-	
-	
-	
-	
-不碰游戏
-	
-T
-	
-T
-	
-	
-	
-	
-	
-洗澡放松
-	
-X
-	
-X
-	
-	
-	
-	
-	
-早起跑步打篮球(养成)
-	
-T
-	
-X
-	
-	
-	
-	
-	
-睡前颈椎操
-	
-	
-	
-	
-	
-	
-	
 # 12.15
 
     今天午睡，成功不看手机，想了会idea，躺在床上回忆、动脑还是很舒服的!!!
@@ -767,4 +711,11 @@ night
 5. 我之前认为，我能从nba球赛的运动员身上，汲取他们顽强拼搏的精神，这固然很好，但是这些精神同样可以从听歌来获取，并且不伤眼，减少脑力消耗，那就是听歌了
 * 经验+1：**通过听歌来汲取勇气、信心；**
 6. 再也不看nba了,最多看下Maddy;
+7. 发现+1：睡前肚子饿当然可以不吃东西，以后睡眠质量++，
+* 因为熬夜不吃东西3天都能有精力打游戏，吃完晚饭饿肚子睡觉不过是小菜一碟，当然可以;
+8. 发现+1：我从英雄杀的感受记录里，找到了游戏、短视频、小短文共同的沉迷机制
+* 游戏利用玩家的好胜心，让玩家在找到策略后依然要面对随机性，用这种随机性来让玩家不断地追求胜利也就是不断重复，但是胜利本身就是概率因此完全的胜利是不可能的；
+* xhs，知乎上的文章也是如此，通过迎合和反对正常观点的回答文章回复，利用玩家寻求认同感的机制，让用户在找到正确的认知后，依然要面对随机性的观点，但是人人都可以发表错误、反智的言论，促使用户不断的翻阅来寻找符合他们认知或情感雪球的回答
 
+# 1.20
+1. 
