--- a/diary/解压日记.md
+++ b/diary/解压日记.md
@@ -1,4 +1,6 @@
 > 一般每周末解压一次，有时候压力太大，单独拿一两天出来解压也不错
+> 前身- [死亡时刻日记——价值观和后果双重驱动的突触重建战役](https://zhuanlan.zhihu.com/p/1996367462489408340)
+
 
 # 1.26
 - [ ] 应用时间序列分析Chap1, Chap2
