--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1016,3 +1016,8 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 
 # 1.19
 1. 看这些垃圾参数调整真的累；
+# 1.20
+1. 头优点晕，按照概率我以后还是会出现刷xhs的情形，像坚持吃饭一样，在工作日坚持工作、吃饭、睡觉，把这些情绪留到周末去消化；
+* 实在消化不了，单独开启个休息日，打打篮球;
+
+
