--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1019,5 +1019,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 # 1.20
 1. 头优点晕，按照概率我以后还是会出现刷xhs的情形，像坚持吃饭一样，在工作日坚持工作、吃饭、睡觉，把这些情绪留到周末去消化；
 * 实在消化不了，单独开启个休息日，打打篮球;
-
-
+2. 中午开始看概率论了，但是还是看了会xhs，因为突触在精力不足时本身难以克服，只能行动——关掉，看书/睡觉;
