--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1020,3 +1020,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 1. 头优点晕，按照概率我以后还是会出现刷xhs的情形，像坚持吃饭一样，在工作日坚持工作、吃饭、睡觉，把这些情绪留到周末去消化；
 * 实在消化不了，单独开启个休息日，打打篮球;
 2. 中午开始看概率论了，但是还是看了会xhs，因为突触在精力不足时本身难以克服，只能行动——关掉，看书/睡觉;
+## 关于思考
+1. 单凭大脑思考问题太累了，写下来用笔记辅助是更合理的方式;
+2. 不要思考太大的问题，每次只思考本周的任务，不断优化本周的任务，是更聪明、效率更高的做法；
+***
