--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -46,4 +46,7 @@
 - [ ] 2. 完成robot网络的env等设置，开始蒸馏；
 - [ ] 3. 运行3DGS
 - [ ] 4. 实现想好的pose estimate框架
+- [ ] 5. find pluasible explanation of new structure;
+
+
 
