--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -723,3 +723,9 @@ night
 3. 中午开始看概率论了;
 4. 中午剪了指甲;
 5. 龚少给了分了一大把薯片~~~!
+6. 晚上吃饭没带手机，对视力不错
+* 但我现在还是有点脑雾;
+7. 晚上本来想跑ubbuntu20.04，但是为了一个应用下一整个系统太蠢了
+* 于是安装了WSL2,正常运行
+* 还安装了docker,代理还没配置好
+* 就是有点烦，黎明前的黑暗，先摆烂摆会，以后再说吧;
