--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -727,5 +727,5 @@ night
 * 但我现在还是有点脑雾;
 7. 晚上本来想跑ubbuntu20.04，但是为了一个应用下一整个系统太蠢了
 * 于是安装了WSL2,正常运行
-* 还安装了docker,代理还没配置好
+* 还安装了docker,激活账号后，代理终于配置好了，拉了个镜像;
 * 就是有点烦，黎明前的黑暗，先摆烂摆会，以后再说吧;
