--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -729,3 +729,4 @@ night
 * 于是安装了WSL2,正常运行
 * 还安装了docker,激活账号后，代理终于配置好了，拉了个镜像;
 * 就是有点烦，黎明前的黑暗，先摆烂摆会，以后再说吧;
+* 以前的window账号注销了，但已经很完美了，我应该可以学习docker和wsl了，不错;
