--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -717,7 +717,7 @@ night
 * 游戏利用玩家的好胜心，让玩家在找到策略后依然要面对随机性，用这种随机性来让玩家不断地追求胜利也就是不断重复，但是胜利本身就是概率因此完全的胜利是不可能的；
 * xhs，知乎上的文章也是如此，通过迎合和反对正常观点的回答文章回复，利用玩家寻求认同感的机制，让用户在找到正确的认知后，依然要面对随机性的观点，但是人人都可以发表错误、反智的言论，促使用户不断的翻阅来寻找符合他们认知或情感雪球的回答
 
-# 1.20
+# 1.20 - wsl+docker for ubuntu code running
 1. 昨晚回来洗漱+5min快速洗脚，听歌15min直接入睡，有进步
 2. 好习惯+1： 用CSDN可以来复习CS基础知识，没事的时候可以看看
 3. 中午开始看概率论了;
