--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -732,3 +732,6 @@ night
 * 以前的window账号注销了，但已经很完美了，我应该可以学习docker和wsl了，不错;
 <img width="1876" height="1686" alt="image" src="https://github.com/user-attachments/assets/45383ac9-4750-47f6-8631-6d9b98718a4b" />
 
+# 1.21
+1. 睡眠永远比无效努力更重要，早上我宁可多睡0.5h，也不起来白忙活，这是个聪明的决定，以后要特别注意睡眠;
+2. 我发现晚上睡前还是会无意识地看xhs排名，这些就是突触，只有行动立刻关掉，干想干的事情才能克服，于是我立马关掉了，继续保持，有进步;
