--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1025,3 +1025,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 2. 不要思考太大的问题，每次只思考本周的任务，不断优化本周的任务，是更聪明、效率更高的做法；
 ***
 3. 以前拒绝参加李x老师的面试是错误的，多锻炼总是好的，失败就失败了
+
+# 1.21
+1. 我不想承担太多责任，那会让我压力很大，我现在不想找女朋友，谁都不要，我现好好工作好好学习好好玩;
+* 小王先再见了，要也是以后再说，什么时候我就说不准了
