--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1029,3 +1029,5 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 # 1.21
 1. 我不想承担太多责任，那会让我压力很大，我现在不想找女朋友，谁都不要，我现好好工作好好学习好好玩;
 * 小王先再见了，要也是以后再说，什么时候我就说不准了
+2. 哇, 我又要看这个,又要看那个, 头好晕亚,
+* 但是看机器人抽风挺好玩的,好不容易出来一次这种效果哈哈哈;
