--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -737,3 +737,5 @@ night
 2. 我发现晚上睡前还是会无意识地看xhs排名，这些就是突触，只有行动立刻关掉，干想干的事情才能克服，于是我立马关掉了，继续保持，有进步;
 3. 中午修改并行进程数，在docker-ubuntu内成功编译LVI-SAM;
 4. 中午觉得口交好无聊啊，这是对的，不断强化新的突触，有进步;
+5. 很菜，一直无法解决一个bug, 但是仔细计算相关的奖励项，在实验场景下的值找到根源;
+* 希望将来有一天，没有我训练不出来的RL Policy, 奥利给!
