--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1033,3 +1033,6 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 但是看机器人抽风挺好玩的,好不容易出来一次这种效果哈哈哈;
 3. 本来做科研就已经头疼了，还要看nm的知乎，给大脑加点垃圾信息，头更藤了，qnm的游戏等垃圾信息源;
 * 我看了下理想，必须做到;
+4. 虽然外卖降价了，但也坚持不吃，坚持吃水果，加油!
+5. 不要轻易答应别人，一定要做充足的准备，避免失信于人;
+
