--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -739,3 +739,4 @@ night
 4. 中午觉得口交好无聊啊，这是对的，不断强化新的突触，有进步;
 5. 很菜，一直无法解决一个bug, 但是仔细计算相关的奖励项，在实验场景下的值找到根源;
 * 希望将来有一天，没有我训练不出来的RL Policy, 奥利给!
+6. 今天发现可以用自嘲来面对贬低，有进步哈哈哈
