--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -39,7 +39,9 @@
 - [ ] 3. 实现想好的pose estimate框架
 - [ ] 4. 理解+复现3DGS
 - [x] 理解3DGS,把场景表示成粗糙稀疏点云图代表的高斯分布核，不断增减、合拆高斯分布俄核、优化高斯分布参数
-* 1.15-1.18连着熬夜打了4天游戏，非常抱歉, 好消息是提升了认知，仍然有进步
+* 1.15-1.18连着熬夜打了4天游戏，非常抱歉,
+* 虽然失败了，但是下一次压力来临时，我有了充分的准备和应对策略，能正确地克服它;
+
 
 # week 4 
 - [ ] 1. 稳定训练camera-based walk task;
