--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1040,3 +1040,5 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 # 1.22
 1. 昨晚其实出了点小问题，睡前的歌听完后，手机开始播放冥想，然后看了点太空科普，
 * 策略提升：下次睡前15min歌听完，手机直接关机
+2. 工作的时候，没有反馈，不习惯才是正常的，
+* 努力建立——时刻思考目标，就能建立反馈的突触
