--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -740,3 +740,6 @@ night
 5. 很菜，一直无法解决一个bug, 但是仔细计算相关的奖励项，在实验场景下的值找到根源;
 * 希望将来有一天，没有我训练不出来的RL Policy, 奥利给!
 6. 今天发现可以用自嘲来面对贬低，有进步哈哈哈
+
+# 1.22
+# 工作和思考是我快乐的源泉!
