--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1043,4 +1043,5 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 2. 工作的时候，没有反馈，不习惯才是正常的，
 * 努力建立——时刻思考目标，就能建立反馈的突触
 3. 我发现我班上的那些同学，在听了我的遭遇后，反而背地里开心，从没每给我任何问候，我实验室的同学也是，
-* 他们根本不关心任何人，只关心自己;
+* 他们根本不关心任何人，只关心自己，也从来不去欣赏反而基督别人的优点，是纯粹的垃圾;
+
