--- a/diary/解压日记.md
+++ b/diary/解压日记.md
@@ -5,6 +5,7 @@
 # strategy
 1. 每周三再来一次解压(晚上外卖+打球)，加上周末的一次，双保险;
 2. 上次那种压力巨大的时候，应该随便找本数学书，在知乎上写笔记吹逼，经验+1!
+3. 周日的目标，不是必须完成的deadline，而是完成=奖励的增长清单;
 
 
 # 1.26
