--- a/diary/解压日记.md
+++ b/diary/解压日记.md
@@ -7,6 +7,11 @@
 2. 上次那种压力巨大的时候，应该随便找本数学书，在知乎上写笔记吹逼，经验+1!
 3. 周日的目标，不是必须完成的deadline，而是完成=奖励的增长清单;
 
+# 1.22- make it+1
+我今天不仅在压力超大的时候，强制睡眠，
+并且在不想睡觉的时候，爬起来跑代码、看数学书，以后写尬到飞起的笔记，成功实践自己的解压策略，这是完全正确的有效的!!!
+超级有进步，我要去快乐地思考搬砖了，加油~
+
 
 # 1.26
 - [ ] 应用时间序列分析Chap1, Chap2
