--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1051,5 +1051,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 对策：什么都不要想，只做下一个目标，享受完成当前目标的过程，哈哈哈
 
 5. 本来想吐槽浙大交大研究生超多的，但想到对实现目标没帮助，放弃了;
-
-
+6. 但是代码要跑不完了，感觉要死了，好焦虑呀，做到最好就行;
