--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -750,5 +750,8 @@ night
 https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/factor/projection_td_factor.h
 
 4. 今晚尝试wsl-18,20运行LVI-SAM, Rviz能工作，但20上全局点云缺失，也许是内存的限制?
-5. 配置conda
-* 
+<img width="2204" height="1465" alt="image" src="https://github.com/user-attachments/assets/bdc84033-dbea-4d1e-9709-d3afd7138235" />
+
+ubuntu 18可以
+
+6. 配置conda
