--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1052,3 +1052,13 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 
 5. 本来想吐槽浙大交大研究生超多的，但想到对实现目标没帮助，放弃了;
 6. 但是代码要跑不完了，感觉要死了，好焦虑呀，做到最好就行;
+
+# 1.23
+1. w是猪吗，我为什么要跑这些?
+2. 不过我现在缺失可以运行ros和ros2项目了
+* 我的时间花错地方了
+## 应该干什么?
+1. 找idea
+2. 复习基础知识，准备面试
+3. 写代码、跑实验、思考
+
