--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -757,3 +757,6 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 
 6. 配置conda
 7. 注册window账号
+
+# 1.23
+1. ubuntu22-ros2-humble配置完成
