--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1063,3 +1063,6 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 3. 写代码、跑实验、思考
 ***
 3. 我不太习惯，我想下游戏，不习惯才是正常的，切断旧有突触是正确的，我能做到，just do it!
+4. 一开始觉得女演员身材好垃圾呀，看了下不知火舞，好肥的亩竹雅好恶心， 然后有意思的是思维，有外贸的墓主兼职就是答辩；
+* 我更学会欣赏思维;
+5. 比游戏好玩的东西多了去了，游戏超级物料，最优策略很容易找到，我作出了正确的选择;
