--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -761,3 +761,5 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 # 1.23
 1. ubuntu22-ros2-humble配置完成
 2. 配置好conda
+3. 辣条真好吃，音乐好听
+4. 晚上对比下辣条和薯条
