--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -763,3 +763,4 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 2. 配置好conda
 3. 辣条真好吃，音乐好听
 4. 晚上对比下辣条和薯条
+5. 我应该在吃饭的时候，养成思考未来、专业、问题的好习惯
