--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -766,3 +766,4 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 5. 我应该在吃饭的时候，养成思考未来、专业、问题的好习惯
 6. 点开知乎的时候，我想，我不应该让我的时间和精力被这些垃圾填充
 * 去看点好玩的不好吗，去看点好玩的多好哈哈哈
+7. 心血来潮，本周我想总结下3D CV最近的算法，看能不能加到自己的论文里；
