--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -48,6 +48,10 @@
 - [x] 2. 完成robot网络的env等设置，即将开始蒸馏;
 - [ ] 3. 实现想好的pose estimate框架
 - [ ] 4. find pluasible explanation of new structure;
+* 能不能结合些具体的控制学理论?
+* 或者用点CV对这种问题的技术?
 - [ ] 5. 运行3DGS
+- [x] 6. robot idea+1
+* 训练感觉调参过程很艰难，想到的改进;
 
 
