--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -770,3 +770,4 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 8. 刚才脑海里因为突触在想游戏，马上想到最优策略就那样无聊死了，科研工作不仅更有意义而且更有趣，马上去看公众号了，有进步
 * 就是看着有点累，我现在还是不知道那些类似傅里叶分析之类的映射函数/损失函数是怎么想出来的? 要多看这些文章，多思考
 9. 晚上搬砖之余没有看知乎，学习opencv的API用来匹配两张图像的关键点，巨大的进步!
+10. 给自己买了辣条，不错，下次可以买豆腐干什么的;
