--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -772,3 +772,4 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 9. 晚上搬砖之余没有看知乎，学习opencv的API用来匹配两张图像的关键点，巨大的进步!
 10. 给自己买了辣条，不错，下次可以买豆腐干什么的;
 11. 仔细对照奖励，列出有问题的项调节，而不是看着demo想当然改那个;
+12. 我改了我能改的参数，就这样了，我真棒，加油!
