--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -773,3 +773,10 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 10. 给自己买了辣条，不错，下次可以买豆腐干什么的;
 11. 仔细对照奖励，列出有问题的项调节，而不是看着demo想当然改那个;
 12. 我改了我能改的参数，就这样了，我真棒，加油!
+
+# 1.24
+1. 我昨晚通过书写感受，成功看穿了游戏的无聊，明智地放弃了游戏；
+* 就是躺在床上因为突触还是看了会
+2. 昨晚本来睡前会有看黄片的冲动的，但是感觉工藤静香、中森明菜这些演员除了鸡皮啥都没有，都懒得看，有进步，
+* 我一下次变得脱俗了
+3. 早上起来看xhs感觉不输入，不知道为什么不看，不过我知道这是个错误的突触，我知道答案了去做就是了
