--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1066,3 +1066,6 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 4. 一开始觉得女演员身材好垃圾呀，看了下不知火舞，好肥的亩竹雅好恶心， 然后有意思的是思维，有外贸的墓主兼职就是答辩；
 * 我更学会欣赏思维;
 5. 比游戏好玩的东西多了去了，游戏超级物料，最优策略很容易找到，我作出了正确的选择;
+
+# 1.24
+1. 我刚才太累了,都没有精力分析了，再睡会
