--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1069,3 +1069,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 
 # 1.24
 1. 我刚才太累了,都没有精力分析了，再睡会
+2. 又看到s发表的错误言论了
