--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1058,7 +1058,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 2. 不过我现在缺失可以运行ros和ros2项目了
 * 我的时间花错地方了
 ## 应该干什么?
-1. 找idea
+1. 找idea 
 2. 复习基础知识，准备面试
 3. 写代码、跑实验、思考
 ***
@@ -1070,3 +1070,5 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 # 1.24
 1. 我刚才太累了,都没有精力分析了，再睡会
 2. 知乎上，都是无能狂怒巨婴的情绪输出
+* 我一打开知乎，一走进社会就看到一堆垃圾，好饭呀
+* 任何fw都能在知乎上发表言论，所以看到是正常的
