--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1046,7 +1046,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 他们根本不关心任何人，只关心自己，也从来不去欣赏反而基督别人的优点，是纯粹的垃圾;
 * 对策：接着关心他们, 但我的时间有限，我选择花在更好的人身上，比如我自己，这叫以直抱怨;
 * 这会让我成为一个有责任感的大人;
-
+ 
 4. tmd，我还要写好多代码，看论文，好烦亚，倒不是不喜欢，只是永远完不成，非常难过;
 对策：什么都不要想，只做下一个目标，享受完成当前目标的过程，哈哈哈
 
@@ -1072,3 +1072,6 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 2. 知乎上，都是无能狂怒巨婴的情绪输出
 * 我一打开知乎，一走进社会就看到一堆垃圾，好饭呀
 * 任何fw都能在知乎上发表言论，所以看到是正常的
+3. 我现在脑子有点乱，但可以做些基础的判断，
+* 别看知乎、别刷xhs了，我喜欢科研就看知识星球，想锻炼身体就打球、旅游，在xhs上输出，在知乎上输出笔记;
+* 我都不想在别人身上花时间，自然也不想在垃圾身上花时间;
