--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -780,3 +780,5 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 2. 昨晚本来睡前会有看黄片的冲动的，但是感觉工藤静香、中森明菜这些演员除了鸡皮啥都没有，都懒得看，有进步，
 * 我一下次变得脱俗了
 3. 早上起来看xhs感觉不输入，不知道为什么不看，不过我知道这是个错误的突触，我知道答案了去做就是了
+4. 我现在一看见知乎、一看见垃圾社交，就想到要接触那些扭曲的句因，一下子不想打开知乎了，有进步
+* 我找到了避免向下社交、低层次社交的原因;
