--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -783,3 +783,4 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 4. 我现在一看见知乎、一看见垃圾社交，就想到要接触那些扭曲的句因，一下子不想打开知乎了，有进步
 * 我找到了避免向下社交、低层次社交的原因;
 5. 我太懒了，我要去工作了
+6. 睡觉真让我开心，只是昨晚没分配够时间，晚上回去好好睡觉;
