--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -33,6 +33,20 @@
 
 • YCBV: instance-level, (rgb, depth, mask, gt pose, cam_k, cad model))
 
+* HOT3D: 33 rigid objects, RGB, fisheye image streams, 19 subjects;
+
+* HOPE: 28 toy grocery objects, occluded, mask, RGBD
+
+* HANDAL： 212 graspable objects, 17 categories, CAD model;
+
+* RU-APC: 14 textured objects, RGBD, no CAD, instance
+
+> faking millimeter-accurate sections
+
+* T-LESS: 30 objects, RGBD, no CAD, instance
+
+* HB: 
+
 - [x] 6. 完成slambook2.git的环境配置，编译其代码
 • 是复现LVI-SLAM的基础，因为我不做slam，所以复现SLAM没什么用，
 • 但加深对位姿估计算法的理解有点用
