--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -33,19 +33,19 @@
 
 • YCBV: instance-level, (rgb, depth, mask, gt pose, cam_k, cad model))
 
-* HOT3D: 33 rigid objects, RGB, fisheye image streams, 19 subjects;
+* HOT3D: 33 rigid objects, instance, RGB, fisheye image streams, 19 subjects, CAD model;
 
-* HOPE: 28 toy grocery objects, occluded, mask, RGBD
+* HOPE: 28 toy grocery objects, instance, occluded, mask, RGBD, CAD model;
 
-* HANDAL： 212 graspable objects, 17 categories, CAD model;
-
-* RU-APC: 14 textured objects, RGBD, no CAD, instance
+* HANDAL： 212 graspable objects, instance, 17 categories, CAD model;
 
 > faking millimeter-accurate sections
 
+* RU-APC: 14 textured objects, instance, RGBD, no CAD,
+
 * T-LESS: 30 objects, RGBD, no CAD, instance
 
-* HB: 
+* HB: 33 instance objects, RGB-D,
 
 - [x] 6. 完成slambook2.git的环境配置，编译其代码
 • 是复现LVI-SLAM的基础，因为我不做slam，所以复现SLAM没什么用，
