--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -785,3 +785,4 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 5. 我太懒了，我要去工作了
 6. 睡觉真让我开心，只是昨晚没分配够时间，晚上回去好好睡觉;
 7. 晚上回去享受控制笔记;
+8. 我在知乎上，通过独自写作，完善了自己的认知，有进步;
