--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1076,3 +1076,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 别看知乎、别刷xhs了，我喜欢科研就看知识星球，想锻炼身体就打球、旅游，在xhs上输出，在知乎上输出笔记;
 * 我都不想在别人身上花时间，自然也不想在垃圾身上花时间;
 4. 我刚才还是想打游戏，但是想到其他的好玩的科研，一下子觉得游戏好无聊;
+5.今天目前没进行idea的有效思考，不过找了数据集这个脏活;
