--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1077,3 +1077,5 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 我都不想在别人身上花时间，自然也不想在垃圾身上花时间;
 4. 我刚才还是想打游戏，但是想到其他的好玩的科研，一下子觉得游戏好无聊;
 5.今天目前没进行idea的有效思考，不过找了数据集这个脏活;
+6. 为什么一个代码库,这么多没见过的第三方库
+* 还有,为什么这么多文件亚,都不知道干什么的
