--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -1,6 +1,9 @@
 # 目标管理
 1. 不要思考太大的问题，每次只思考本周的任务，不断优化本周的任务，是更聪明、效率更高的做法；
 2. 下次不仅仅要制定每周目标，还没把每周目标分配到每天上，来节省时间;
+3. 之前的衔接有问题，每学完一门课，应该把相应的笔记代码保存下来方便用到用，好消息是保存到WPS上了,
+* 以后每学一个库，都传到github上，本地也留相应的配置，老主机就是我的技能包;
+
 
 # week1
 1. 熟悉opengl,glfw,pangolin等点云图渲染库的基本用法，
