--- a/diary/每天让我快乐的3个瞬间.md
+++ b/diary/每天让我快乐的3个瞬间.md
@@ -788,3 +788,6 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 8. 我在知乎上，通过独自写作，完善了自己的认知，有进步;
 9. 找到最佳心态:
 * **全力以赴, 尽力就好, 不疾而速**
+10. git clone ros_for_beginner到wsl-22中, nice
+* 但有点累了，明天再看吧,
+* 其实现在应该想CV创新点;
