--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -4,7 +4,7 @@
 3. 之前的衔接有问题，每学完一门课，应该把相应的笔记代码保存下来方便用到用，好消息是保存到WPS上了,
 * 以后每学一个库，都传到github上，本地也留相应的配置，老主机就是我的开发+传统算法技能包(DL算法是新主机);
 4. 睡眠和休息应该排在最前面;
-5. 
+5. 像信徒一样执行所有忠告，我懒得花时间思考这里的为什么,我觉得这个问题挺无聊的，还是专业更好玩，加油
 
 # week1
 1. 熟悉opengl,glfw,pangolin等点云图渲染库的基本用法，
