--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -9,7 +9,8 @@
 7. 比尔之所以表现比新秀更烂，是因为他身上背了太多包袱，这启示我们：
 * 与其沉迷于虚荣——关注些鸡毛蒜皮畏手畏脚，不如想自己是个光棍，全心全意投入专业，尽我所能做到最好
 8. 我现在状态很烂，我想先睡觉恢复到最佳状态
-9. 我只敢两件事，休息和睡觉
+9. 我只干两件事，睡觉和专业，我认为睡觉很舒服，搬砖很好玩
+
 
 # week1
 1. 熟悉opengl,glfw,pangolin等点云图渲染库的基本用法，
