--- a/diary/焦虑日记.md
+++ b/diary/焦虑日记.md
@@ -1085,3 +1085,6 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
  * core下各文件夹列出了主要模块的实现
  * lib提供了一些中间函数的实现
 * 真是复杂,我只是了解基本的CV算法,但是从未实现,还要努力学习;
+
+# 1.27
+1. 我现在头有点晕，我得再睡会，才能养成最佳状态;
