--- a/diary/生活焦虑日记.md
+++ b/diary/生活焦虑日记.md
@@ -1087,4 +1087,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 真是复杂,我只是了解基本的CV算法,但是从未实现,还要努力学习;
 
 # 1.27
-1. 我现在头有点晕，我得再睡会，才能养成最佳状态;
+1. 我现在头有点晕，我得再睡会，才能养成最佳状态，脑子才能舒服运转;
