--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -6,7 +6,7 @@
 4. 睡眠和休息应该排在最前面;
 5. 像信徒一样执行所有忠告，有志于实现理想的聪明人能有效复用别人的忠告
 * 我懒得花时间思考这里的为什么,我觉得这个问题挺无聊的，还是专业更好玩，加油
-* 时间有限，没有那么多时间给我们犯错、试错再改正了，先直接坚持良好的品行，有时间再想为什么
+* **时间有限，没有那么多时间给我们犯错、试错再改正了，先直接坚持良好的品行，有时间再想为什么**
 6. 聪明人不在目标以外的事物上争强好胜，因为人的精力是有限的;
 7. 比尔之所以表现比新秀更烂，是因为他身上背了太多包袱，这启示我们：
 * 与其沉迷于虚荣——关注些鸡毛蒜皮畏手畏脚，不如想自己是个光棍，全心全意投入专业，尽我所能做到最好
