--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1092,3 +1092,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 3. 我去年来第二次成功睡觉，
 * 精力不好必须睡觉，睡到状态完全恢复为止，不然心理和生理都会出问题
 4. 现在头还是有点晕，吃完饭回来休息会再去实验室，利用GPU;
+5. 我之前忽略了时间，不过意识到了这点有进步，继续努力;
