--- a/diary/生活中每天让我快乐的3个瞬间.md
+++ b/diary/生活中每天让我快乐的3个瞬间.md
@@ -804,3 +804,4 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 3. 我是因为不信邪来打游戏，游戏出了点看动画片的多巴胺非常恶心,确实不应该打游戏，
 * 以后不要钻牛角尖,还有很多其他人生的忠告，去反着来经历然后思考太累了，我经历完发现所有的忠告都是对的；
 * **像信徒一样执行所有忠告，我懒得花时间思考这里的为什么,我觉得这个问题挺无聊的，还是专业更好玩，加油**
+4. 晚上吃饭的时候没有看手机
