--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1094,5 +1094,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 4. 现在头还是有点晕，吃完饭回来休息会再去实验室，利用GPU;
 5. 我之前失败了，因为忽略了时间，不过意识到了这点有进步，继续努力，但太慢了，以后要多思考提速，但只能这样了;
 6. 长大的问题是，没有人会关心我，什么时候都没有，必须靠自己努力，哈哈哈;
+7. 我刚才回忆打游戏被对方针对是在太不舒服了，我凭什么要1打x，我可以归因于阵容不好、队友配合稀烂，但就是说自己水平太差也没什么不好，承认打游戏不够厉害(其实是我没花时间);
+* 说完这个舒服多了;
 
 
