--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -14,6 +14,7 @@
 9. 我只干两件事，睡觉和专业，我认为睡觉很舒服，搬砖很好玩
 10. 没有什么是不能舍弃的，饭可以不吃，垃圾突触当然可以切断，垃圾软件当然可以卸载，垃圾新闻也可以不看
 11. 快乐来自针对目标习惯的坚持，坚持良好的品行就能缓解大部分焦虑了，一石二鸟, 这是个有意思的发现;
+12. 与其费心思分析归因于客观原因，不如坦率谦逊地承认自己不如别人，是非常聪明的做法;
 
 
 # week1
