--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1,4 +1,9 @@
-写下压力源有助于解压的原因
+# 生活压力源的种类
+1. 身体不适
+2. 坚持良好品行中遇到的问题
+3. 社交的问题
+
+# 写下压力源有助于解压的原因
 写下压力源确实可以有助于减压。这种方法有几个心理学和情感上的好处：
  1. 识别压力源：通过写下你的压力源，你可以清楚地识别出导致你焦虑或紧张的具体原因。
 2. 表达情感：将内心的想法和情感写下，可以帮助你表达和释放这些情感，使其不再压抑在心中。
@@ -1098,3 +1103,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 说完这个舒服多了;
 8. 当好胜心或者错误的情绪促使我干与目标不相关的事情时，最佳的行动策略是什么?
 * 谦虚地承认自己不行，然后继续追求理想;
+9. 我的颈椎有点疼，先睡觉吧;
