--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1104,3 +1104,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 8. 当好胜心或者错误的情绪促使我干与目标不相关的事情时，最佳的行动策略是什么?
 * 谦虚地承认自己不行，然后继续追求理想;
 9. 我的颈椎有点疼，先睡觉吧;
+10. 我头好晕呀，先睡觉了;
