--- a/diary/工作中每天让我快乐的3个瞬间.md
+++ b/diary/工作中每天让我快乐的3个瞬间.md
@@ -4,3 +4,5 @@
 1. 晚上休息时间快开始看每日CV paper!
 2. 我把CV paper, ICCV会议视频加入收藏夹
 3. 看人形robot\点云相关的论文, 找创新点
+4. 我打算总结下CV的基本技术和最新方法,总结过了，直接开始想创新点;
+* 从控制方法里找创新，为了创新点你还要把所有专业学一遍吗不可能的，不找了就这个知识储备了
