--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1105,3 +1105,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 谦虚地承认自己不行，然后继续追求理想;
 9. 我的颈椎有点疼，先睡觉吧;
 10. 我头好晕呀，先睡觉了;
+11. 复用经验和忠告迫在眉睫，必须执行, 加油!
