--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1106,3 +1106,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 9. 我的颈椎有点疼，先睡觉吧;
 10. 我头好晕呀，先睡觉了;
 11. 复用经验和忠告迫在眉睫，必须执行, 加油!
+12. 我强制睡眠，舍弃知乎和手机的垃圾信息源的时候不太舒服，但是必须执行
