--- a/diary/工作中每天让我快乐的3个瞬间.md
+++ b/diary/工作中每天让我快乐的3个瞬间.md
@@ -8,3 +8,9 @@
 * 从控制方法里找创新，为了创新点你还要把所有专业学一遍吗不可能的，不找了就这个知识储备了
 5. 公众号要多看论文分析，快速收获论文方法，好主意!
 6. 吃饭、工作间隙一定要多思考以后要干什么，怎么干?
+
+
+
+
+# 工作习惯
+1. 每晚回来看0.5h论文，然后睡觉
