--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -813,3 +813,6 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 # 生活习惯
 1. 早上7:30起床
 2. 晚上9:30回寝室
+3. 睡前把手机远离床位/手机关机
+4. 每天8杯水
+5. 周日下午拿来锻炼(早上设置训练时间更充分)
