--- a/diary/工作问题+焦虑记录.md
+++ b/diary/工作问题+焦虑记录.md
@@ -11,3 +11,7 @@
 * RL半天训练不出来，都不知道用改什么参数可以让训练有效了
 * 还是说，要调整训练方式和网络结构
 * idea半天也没有想出来
+8. 我不想做CV基础层的工作——图像特征提取；
+* 我想做一些建立概率建模，然后用特定网路、优化损失函数、训练方法执行的方法；
+* 这需要熟悉不同的训练方法的精髓，以及区别——如何执行重要性采样?
+
