--- a/diary/工作问题+焦虑记录.md
+++ b/diary/工作问题+焦虑记录.md
@@ -15,3 +15,6 @@
 * 我想做一些建立概率建模，然后用特定网路、优化损失函数、训练方法执行的方法；
 * 这需要熟悉不同的训练方法的精髓，以及区别——如何执行重要性采样?
 9. 我tm现在连自己的人生目标是什么都不知道;
+
+# 1.28
+1. 我不知道明天应该怎么办了，我先做到今天的最好，只能这样了;
