--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -807,6 +807,10 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 4. 晚上吃饭的时候没有看手机
 5. 晚上10天来洗了次澡,nice!
 
+# 1.28
+1. bonus: 早饭不看手机
+2. bonus: 上午工作间隙 深蹲*30;
+
 
 
 
