--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1109,3 +1109,6 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 12. 我强制睡眠，舍弃知乎和手机的垃圾信息源的时候不太舒服，但是必须执行
 13. 我为什么要关注零散信息呢，关注专业即可；
 14. 过去打游戏大概占据了我30%的时间，扯皮占20%，正常这俩都要戒掉
+
+# 1.28
+1. 我在工作中发现头有点晕，应该怎么办?
