--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -820,7 +820,7 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 3. 睡前把手机远离床位/手机关机
 4. 吃饭\工作间隙手机关机
 5. 每天8杯水
-6. 每天一个水果
+6. 每天晚上7:30一个水果
 7. 工作间隙深蹲\爬楼梯\散步放松
 8. 周日下午拿来锻炼(早上设置训练时间更充分)
 9. 睡前不吃东西，避免影响睡眠
