--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1114,3 +1114,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 1. 我在工作中发现头有点晕，应该怎么办?
 * 睡15min?
 2. 因为熬夜，我又开始掉头发了，而且头皮开始长螨虫;
+3. 颈椎很疼，哎，不要久坐;
