--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -810,8 +810,7 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 # 1.28
 1. bonus: 早饭不看手机
 2. bonus: 上午工作间隙 深蹲*30;
-
-
+3. bonus: 中午深度睡眠1.5h
 
 
 # 生活习惯
