--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -812,6 +812,9 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 2. bonus: 上午工作间隙 深蹲*30;
 3. bonus: 中午深度睡眠1.5h
 4. bonus: 3杯水
+5. bonus: 5杯水
+6. 今天澄哥给我带了个苹果，太开心了，这让我明白，礼物比关怀更有效，
+
 
 # 生活习惯
 1. 早上7:30起床
@@ -819,8 +822,8 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 3. 睡前把手机远离床位/手机关机
 4. 吃饭\工作间隙手机关机
 5. 每天8杯水
-6. 每天晚上7:30一个水果
-7. 工作间隙深蹲\爬楼梯\散步放松
-8. 周日下午拿来锻炼(早上设置训练时间更充分)
-9. 睡前不吃东西，避免影响睡眠
-
+6. 清淡饮食
+7. 每天晚上7:30一个水果
+8. 工作间隙深蹲\爬楼梯\散步放松
+9. 周日下午拿来锻炼(早上设置训练时间更充分)
+10. 睡前不吃东西，避免影响睡眠
