--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1100,6 +1100,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 2. 因为熬夜，我又开始掉头发了，而且头皮开始长螨虫;
 3. 颈椎很疼，哎，不要久坐;
 4. 当旧的突触激活，时间应该花在有趣且有意义的科研、工作、休息上，加油!
+5. 我现在tm累死了，必须先睡觉
 
 
 # 生活压力源的种类
