--- a/diary/生活指南.md
+++ b/diary/生活指南.md
@@ -1,10 +1,14 @@
 # 熬夜后的处理(全力避免)
 1. 颈椎操
+* 其实颈椎操每天都可以做
+2. 吃核桃
 
 
 
 # 远离狗血
 https://www.binance.com/zh-CN/square/post/32685512052673
+* 对生活中的重要决定都要慎重选择
+
 
 # 累死了怎么办
 1. 必须先睡觉
