--- a/diary/工作中每天让我快乐的3个瞬间.md
+++ b/diary/工作中每天让我快乐的3个瞬间.md
@@ -11,7 +11,9 @@
 
 # 1.28
 1. 晚上睡觉的时候睡不着的时候，开始看论文了
-2. 没什么好说的不看垃圾信息源，正在进步
+2. 昨天我成功读懂了self6d++的代码
+3. 我了解了cv的代码书写框架，datasets, models, engine, lib
+4. gpt教导我发现，强化学习的奖励不一定是单项的，可以是若干奖励的组合
 
 
 # 工作习惯
