--- a/diary/工作中每天让我快乐的3个瞬间.md
+++ b/diary/工作中每天让我快乐的3个瞬间.md
@@ -15,6 +15,9 @@
 3. 我了解了cv的代码书写框架，datasets, models, engine, lib
 4. gpt教导我发现，强化学习的奖励不一定是单项的，可以是若干奖励的组合
 
+# 1.29
+1. 开始在休息时间读论文
+
 
 # 工作习惯
 1. 每晚回来看0.5h论文，然后睡觉
