--- a/diary/生活焦虑记录.md
+++ b/diary/生活焦虑记录.md
@@ -1106,6 +1106,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 # 1.29
 1. 我又在知乎上发泄情绪了，也没啥，
 * 最佳做法是，远离狗血不抱怨，珍惜时间, cheer up~
+2. 搬转类似了，必须躺了眯一会先睡觉，效果不错
 
 
 # 生活压力源的种类
