--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1125,3 +1125,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
     定期反思：定期回顾你的日记，反思自己的情绪变化和应对策略。
 
  通过这种方式，你不仅能有效地减轻心理压力，还能提升自我意识和解决问题的能力。如果你愿意尝试，可以看看这种写作方式对你情绪的具体影响。
+5. 我现在头有点晕，冥想一会;
