--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -17,6 +17,8 @@
 12. 与其费心思分析归因于客观原因，不如坦率谦逊地承认自己不如别人，是非常聪明的做法;
 13. 一定要坚持写日记，多和自己说话，缓解孤单，总结生活，争取进步
 14. 过去打游戏大概占据了我30%的时间，扯皮占20%，正常这俩都要戒掉
+15. 我不想记录，但是失控的原因正是拒绝反省，拒绝记录，必须记录, 记录$\include$ 反省
+
 
 # week1
 1. 熟悉opengl,glfw,pangolin等点云图渲染库的基本用法，
