--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1107,6 +1107,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 1. 我又在知乎上发泄情绪了，也没啥，
 * 最佳做法是，远离狗血不抱怨，珍惜时间, cheer up~
 2. 搬转类似了，必须躺了眯一会先睡觉，效果不错
+3. 眼睛和颈椎有点疼，头昏昏沉沉的，中午还是要回去睡觉，加油!
 
 
 # 生活压力源的种类
@@ -1126,3 +1127,4 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 
  通过这种方式，你不仅能有效地减轻心理压力，还能提升自我意识和解决问题的能力。如果你愿意尝试，可以看看这种写作方式对你情绪的具体影响。
 5. 我现在头有点晕，冥想一会;
+
