--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1108,7 +1108,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 最佳做法是，远离狗血不抱怨，珍惜时间, cheer up~
 2. 搬转类似了，必须躺了眯一会先睡觉，效果不错
 3. 眼睛和颈椎有点疼，头昏昏沉沉的，中午还是要回去睡觉，加油!
-
+4. 累死了，先回去睡觉了，明天过来好好看论文好好想idea，好好玩;
 
 # 生活压力源的种类
 1. 身体不适
