--- a/diary/工作中每天让我快乐的3个瞬间.md
+++ b/diary/工作中每天让我快乐的3个瞬间.md
@@ -18,6 +18,10 @@
 # 1.29
 1. 开始在休息时间读论文
 2. 教训：读代码、写代码一定要完全理解整体，一点参数的修改也可能导致严重的错误，浪费巨量时间;
+3. 今天跑起来了yolov4 for object detection
+* 之前SAM也可以分割
+4. 今天在训练obj-lift的时候，发现了很多有趣的动作哈哈哈
+5. 今天直接看overview搞懂了GeoCompletion的原理
 
 
 # 工作习惯
