--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -819,6 +819,13 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 1. 我六年级毕业的成绩是393，英语96, 在知乎上炫耀可以快乐一下，但是要避免哗众取宠，以后只给自己说打气;
 2. bonus: 4杯水
 3. bonus: 下午深蹲*30
+4. bonus: 晚上深蹲*30
+
+
+# 1.30
+1.bonus: 早饭不看手机
+
+
 
 # 生活习惯
 1. 早上7:30起床
