--- a/diary/工作问题+焦虑记录.md
+++ b/diary/工作问题+焦虑记录.md
@@ -31,6 +31,10 @@
 
 3. CV的配置文件让人头大，不过代码本来就是这样的, enjoy it, go slowly;
 
+# 1.30
+1. 总感觉方法没什么新的，要多看论文汇总创新点，再改进;
+
+
 # 经验
 1. 避免承担能力之外的责任，这是导致压力失控的重要原因
 * 比如为别人提供咨询，我自己一点成果都没有;
