--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -823,7 +823,9 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 
 
 # 1.30
-1.bonus: 早饭不看手机
+1. bonus: 早饭不看手机
+2. bonus: 早上两杯水
+3. bonus: 附和停止和傻叉的争吵
 
 
 
@@ -838,4 +840,5 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 8. 工作间隙深蹲\爬楼梯\散步放松
 9. 周日下午拿来锻炼(早上设置训练时间更充分)
 10. 睡前不吃东西，避免影响睡眠
+
 
