--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1110,6 +1110,10 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 3. 眼睛和颈椎有点疼，头昏昏沉沉的，中午还是要回去睡觉，加油!
 4. 累死了，先回去睡觉了，明天过来好好看论文好好想idea，好好玩;
 
+# 1.30
+1. 面对诽谤：以直报怨，当然首要是保护精力
+
+
 # 生活压力源的种类
 1. 身体不适
 2. 坚持良好品行中遇到的问题和不适
