--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1113,6 +1113,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 # 1.30
 1. 面对诽谤：**以直报怨，当然首要是保护精力，这些没什么用的**
 2. 不要刷垃圾信息源
+3. 不要和沙比吵架，和沙比吵架是非常累的
 
 
 # 生活压力源的种类
@@ -1132,5 +1133,6 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 
  通过这种方式，你不仅能有效地减轻心理压力，还能提升自我意识和解决问题的能力。如果你愿意尝试，可以看看这种写作方式对你情绪的具体影响。
 5. 我现在头有点晕，冥想一会;
+
 
 
