--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -18,6 +18,7 @@
 13. 一定要坚持写日记，多和自己说话，缓解孤单，总结生活，争取进步
 14. 过去打游戏大概占据了我30%的时间，扯皮占20%，正常这俩都要戒掉
 15. 我不想记录，但是失控的原因正是拒绝反省，拒绝记录，必须记录, 反省 $\in$ 记录
+16. 我的理想是让家里人过得更好，有所创造，不是找女朋友
 
 
 # week1
