--- a/diary/工作中每天让我快乐的3个瞬间.md
+++ b/diary/工作中每天让我快乐的3个瞬间.md
@@ -26,6 +26,9 @@
 # 1.30
 1. bonus: 午休看书;
 * 明白PPO的期望奖励对策略的引导，Bellman+累积确保R(a)客观, PPO=选择最佳(R(a) max)的action
+2. 今天成功完成了urdf的替换，现在更加逼真，奖励也更可控了
+3. 今天下午了解了很多奖励的设计思想，velocity只适合作为惩罚防止振动，要制定速度的话torch.exp(),
+* 可以和控制理论起来吗，感觉我是名词党;
 
 
 
