--- a/diary/工作问题+焦虑记录.md
+++ b/diary/工作问题+焦虑记录.md
@@ -35,6 +35,7 @@
 1. 总感觉方法没什么新的，要多看论文汇总创新点，再改进;
 2. 等结果的时候，一定要去看论文，想idea，别浪费时间;
 3. 刚才完成小任务竟然去看游戏了，要坚决杜绝!
+4. 我想的太少，根本没想，跟这些沙毕浪费太多时间了,要努力避免;
 
 
 # 经验
