--- a/diary/工作中每天让我快乐的3个瞬间.md
+++ b/diary/工作中每天让我快乐的3个瞬间.md
@@ -29,6 +29,7 @@
 2. 今天成功完成了urdf的替换，现在更加逼真，奖励也更可控了
 3. 今天下午和晚上了解了很多奖励的设计思想，velocity只适合作为惩罚防止振动，要制定速度的话torch.exp(),
 * 可以和控制理论起来吗，感觉我是名词党;
+4. bonus: 今晚回来看了知识星球
 
 
 # 工作习惯
