--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1119,7 +1119,9 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 6. 我分分钟就可以找到女朋友，只是现在不想，先好好干活，加油!
 7. 好好享受科研，加油!
 8. 我对孙竹没什么兴趣，我只是觉得她应该把自己还有香猪们举报了
+* 我不应该对这种软弱的猪皮抱有幻想，它知识拿着我的善良到处给自己脸上贴金，不要想了靠自己
 9. 先不想了，到点了，先睡觉
+
 
 
 # 生活压力源的种类
