--- a/diary/工作问题+焦虑记录.md
+++ b/diary/工作问题+焦虑记录.md
@@ -37,6 +37,9 @@
 3. 刚才完成小任务竟然去看游戏了，要坚决杜绝!
 4. 我想的太少，根本没想，跟这些沙毕浪费太多时间了,要努力避免;
 
+# 1.31
+1. 真的服了，加压一个.zip就要n TB，先训练robot吧;
+
 
 # 经验
 1. 避免承担能力之外的责任，这是导致压力失控的重要原因
