--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1126,7 +1126,8 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 1. bonus： 睡了个好觉
 2. 中午觉得需要走位的ADC好好玩，算了手部操作无聊死了，坚决不碰游戏，遵守经验，加油!
 * 不碰垃圾信息源和游戏是绝对正确的, just do it, 吃完饭去睡觉了;
-
+3. 我不该上知乎吵架，不该看知乎
+* 但我学会了，文明地表达自己的不满，文明用语
 
 
 # 生活压力源的种类
